# grantlayer

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  50_REVIEW_REQUEST.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PARITY_BACKLOG.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  TESTER_REPORT.md  agent_integration_manifest.json  docker-compose.dev.yml  docker-compose.postgres.yml  docker-compose.test.yml  docker-compose.yml  index.html  llms-full.txt  llms.txt  mkdocs.yml  netlify.toml  pyproject.toml  pytest.ini  requirements-optional.txt  requirements.txt  sitemap.xml
.githooks/: pre-push
.github/: pull_request_template.md
admin_operator_tenant_control_plane/: index.html
agent_quickstart/: index.html
agent_task_contract/: index.html
ai_reviewer_feedback_triage/: index.html
api_contract_sdk_packaging_decision/: index.html
api_sdk_agent_value_decision_pack/: index.html
architecture/: index.html
audit_hash_chain_write_lock/: index.html
audit_log_immutability_review/: index.html
authentication/: index.html
backend/: Dockerfile  __main__.py  alembic.ini  requirements-dev.txt
claim_safety_controlled_preview_boundary/: index.html
contributing/: index.html
controlled_external_review_handoff_pack/: index.html
controlled_preview_boundary_pack/: index.html
dashboard/: index.html
data_governance_audit_operations/: index.html
demo_endpoint_safety_guard/: index.html
demo_runner_api_smoke/: index.html
demo_scenario/: index.html
demo_script/: index.html
dependency_manifest/: index.html
deploy/: README.md
developer_adoption_strategy_intake/: index.html
docs/: README.md  admin_operator_tenant_control_plane.md  agent_quickstart.md  agent_task_contract.md  ai_reviewer_feedback_triage.md  api_contract_sdk_packaging_decision.md  demo_script.md  (+129 more)
sdk/: README.md  pyproject.toml
sdk/grantlayer/: __init__.py  client.py  exceptions.py  models.py
sdk/python/: README.md  grantlayer_client.py
sdk/tests/: test_client.py
(+1001 files in other folders)
