[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grantlayer-sdk"
version = "0.1.0"
description = "Python SDK for GrantLayer API"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["grantlayer*"]
