[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grantlayer"
version = "0.2.0"
description = "Python SDK for GrantLayer API — async + sync, Pydantic models, tenacity retry"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "fastapi", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["grantlayer*"]

[tool.setuptools.package-data]
grantlayer = ["py.typed"]
